[project]
name = "rag-system-05-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Chroma==0.2.0",
    "chromadb==0.5.3",
    "docx>=0.2.4",
    "gradio>=5.20.1",
    "ipython>=9.0.2",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.19",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.8",
    "logger>=1.4",
    "logzero>=1.7.0",
    "openai-agents>=0.2.7",
    "psycopg2>=2.9.10",
    "pypdf>=5.3.1",
    "pyprojroot>=0.3.0",
    "python-docx>=1.1.2",
    "pyyaml>=6.0.2",
    "unstructured>=0.17.0",
]

